[package]
name = "sermcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = { version = "0.12.3", features = ["rustls-tls"] }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mime = "0.3.17"
tempfile = "3.10.1"
zerocopy = "0.8.0-alpha.7"

[profile.release]
opt-level = 3
lto = true
strip = true