[package]
name = "sermcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "stream"] }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mime = "0.3.17"
mime_guess = "2.0.4"
tempfile = "3.10.1"
svix-ksuid = "0.8.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
tokio-stream = "0.1.15"

#[profile.release]
#opt-level = 3
#lto = true
#strip = true